--- a/Machine Learning/Lab6/Lab 6 Logistic Regression.ipynb
+++ b/Machine Learning/Lab6/Lab 6 Logistic Regression.ipynb
@@ -208,6 +208,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c23f2e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1372 entries, 0 to 1371\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Variance  1372 non-null   float64\n",
+      " 1   Skewness  1372 non-null   float64\n",
+      " 2   Curtosis  1372 non-null   float64\n",
+      " 3   Entropy   1372 non-null   float64\n",
+      " 4   Class     1372 non-null   int64  \n",
+      "dtypes: float64(4), int64(1)\n",
+      "memory usage: 53.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acd0b11",
+   "metadata": {},
+   "source": [
+    "The cells below show a tally of how many notes are forged and are real in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3d00bad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variance    610\n",
+       "Skewness    610\n",
+       "Curtosis    610\n",
+       "Entropy     610\n",
+       "Class       610\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Class']==1].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "04c20176",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variance    762\n",
+       "Skewness    762\n",
+       "Curtosis    762\n",
+       "Entropy     762\n",
+       "Class       762\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Class']==0].count()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e95da5c9",
    "metadata": {},
@@ -225,18 +314,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6c1410e",
+   "metadata": {},
+   "source": [
+    "To check the linearity among attributes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "84eeb97e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1e8509a73c8>"
+       "<seaborn.axisgrid.PairGrid at 0x195db504b08>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "28387ecd",
    "metadata": {},
    "outputs": [
@@ -277,7 +374,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -310,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3edd3b41",
    "metadata": {},
    "outputs": [
@@ -453,7 +550,7 @@
        "[1372 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "1acb58b3",
    "metadata": {},
    "outputs": [
@@ -479,7 +576,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "340b26aa",
    "metadata": {},
    "outputs": [
@@ -562,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6919069e",
    "metadata": {},
    "outputs": [],
@@ -572,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5982b13f",
    "metadata": {},
    "outputs": [],
@@ -582,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c3256d40",
    "metadata": {},
    "outputs": [
@@ -598,7 +695,7 @@
        "       [0.32452819, 0.49074676, 0.34334762, 0.88594888]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,6 +810,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "da8bf0ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-9.74269185, -7.08979338, -6.27239663,  0.17280531]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LogReg.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1c5bba81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10.64420107])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LogReg.intercept_"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "08b6eadc",
    "metadata": {},
@@ -731,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "b7eb29eb",
    "metadata": {},
    "outputs": [],
@@ -741,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "b569537e",
    "metadata": {},
    "outputs": [
@@ -769,7 +908,7 @@
        "       1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "6dbc353e",
    "metadata": {},
    "outputs": [
@@ -808,13 +947,57 @@
        "       1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b48a650b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9684466019417476"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "metrics.accuracy_score(test_y,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fefb06b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[223,   6],\n",
+       "       [  7, 176]], dtype=int64)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.confusion_matrix(test_y,pred)"
    ]
   },
   {
@@ -827,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "39c57b67",
    "metadata": {},
    "outputs": [
@@ -843,7 +1026,7 @@
        "       [ -2.5419 ,  -0.65804,   2.6842 ,   1.1952 ]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "be07b4bf",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1193,7 @@
        "[1372 rows x 6 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,16 +1213,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "5f1a2935",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import metrics"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "be873730",
    "metadata": {},
@@ -1049,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "60f6a387",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1232,7 @@
        "0.9737609329446064"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "28314df7",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1261,7 @@
        "0.9737609329446064"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "5dd583cf",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1290,7 @@
        "0.9590163934426229"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "31ea4d3c",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1320,7 @@
        "       [ 25, 585]], dtype=int64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
