DF Lab 14 done and FDA lab 12 done

--- a/Machine Learning/Lab 2/Exercise-1.ipynb
+++ b/Machine Learning/Lab 2/Exercise-1.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "148c6d9d",
+   "metadata": {},
+   "source": [
+    "### S Shyam Sundaram 19BCE1560"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "06e0eb02",
    "metadata": {},
    "source": [
